--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,1 +1,6 @@
 @import "tailwindcss";
+
+@font-face {
+  font-family: 'Montserrat';
+  src: url('/fonts/Montserrat-Regular.ttf') format('truetype');
+}
