feat: implement Apostrophe, Dash, Plus, and StyledText components for improved text styling; update various pages to utilize these components

--- a/Frontend/src/app/globals.css
+++ b/Frontend/src/app/globals.css
@@ -10,6 +10,11 @@
   src: url("/fonts/lovato/fonnts.com-Lovato-Light.otf") format("truetype");
   
 }
+@font-face {
+  font-family: "Montserrat";
+  src: url("/fonts/Montserrat-Regular.ttf") format("truetype");
+  
+}
 
 @font-face {
   font-family: "Lovato-Regular";
